<resources>
    <string name="app_name">HealthManager</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main">首页</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_personal_information">个人信息</string>
    <string name="nav_medical_data">医疗数据</string>
    <string name="nav_hospital_data">住院数据</string>
    <string name="nav_examination_data">体检数据</string>
    <string name="nav_clinic_data">门诊数据</string>
    <string name="nav_function">功能</string>
    <string name="nav_setting">设置</string>
    <string name="nav_about">关于</string>
    <string name="nav_login">登录</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_health_info">HealthInfoActivity</string>
    <string name="title_activity_rostrum_detail">RostrumDetailActivity</string>

    <string name="message">“肌肉疲劳型”颈椎病在白领中最常见
        \n据何二兴介绍，一般被诊断为颈椎劳损性疾病的病人，虽然都是表现为脖子痛，但具体来讲也有不同的类型：
        \n第一类属于颈部肌肉疲劳型，发病原因多是由于在日常生活和工作中久坐少动，或者长时间姿势不当引起的颈部肌肉疲劳和紧张。
        \n第二类属于韧带损伤型，是颈部韧带受到外力拉扯而导致损伤，这种情况下患者会感觉颈部某个部位如刀割般疼痛。
        \n第三类属于椎间盘疾病，包括椎间盘劳损、老化或者退行性病变。椎间盘相当于一个微动关节，是由透明软骨板、纤维环和髓核组成，分布在脊椎骨间。如果长期姿势不当或者受到外力拉扯，纤维环破裂，髓核从破裂处脱出，压迫颈椎神经，就会患上此病。患椎间盘疾病的病人通常感觉疼痛源比较深入，范围大，疼痛呈放射状。
        \n第四类属于颈椎骨劳损，这是最严重的类型，属于骨头性病损，严重者是需要施行手术治疗的。
        \n以上几种颈椎劳损性疾病，程度由轻及重，通常第一类即“肌肉疲劳型”的颈椎病劳损在年轻白领群中最为常见。这类患者一般如果及时休息和调整姿势，身体会自行调节和恢复，一两天疼痛就会有所减轻。但如果是后面三种类型的颈椎疾病，就必须前往医院采取相关的治疗方法。如果不及时采取针对性的治疗措施，不但会延误治疗，甚至会加重病情。
        \n别随意选择网络上流传的“颈椎操”
        \n何二兴说，正是由于现在颈椎病逐渐演变成年轻人中的“流行病”，网上流传的各种防止颈椎病的“保健操”、“颈椎操”也是五花八门。出于“从众”心理，目前很多颈椎病患者，经常不顾自己的病情，随意选择“自行疗法”——“米字操”不行，就换换枕头；换枕头不行，又试试爬行疗法；再不行，练瑜伽……结果，病情越来越严重。
        \n“现在网络发达，良莠不齐的网络资讯向患者传递了很多不正确的健康知识。而很多患者对颈椎疾病也只是一知半解。”何二兴说，“颈部除了支撑和转动，并没有承担其他的运动功能，所以人类的颈部肌肉是比较纤弱的，尤其是不适合过强锻炼和一些猛烈性的动作。所以，网上有些颈椎操教人猛烈地甩头来增加灵活性，比如甩头操，或者太频繁地转动头部，比如360度转头，或者大幅度动动头部，比如米字操，都是非常不恰当的。”
        \n何二兴特别指出，现在很多人希望通过练瑜伽来缓解颈椎问题，但颈椎病患者练瑜伽也是需要特别注意的，轻柔型、缓慢型的动作的确可以帮助放松颈部肌肉，但不能太大幅度地拉伸颈部，要注意自己的极限所在，一不留神会使本来有损伤的颈肌雪上加霜。
        \n建议：利用栏杆桌子等进行俯卧撑练习
        \n何二兴说， 要彻底根治颈椎疾病，首先要弄清楚病因所在，对症才能下药。现在很多年轻人喜欢在地铁上一直低着头玩手机发微博，或躺在床上玩Ipad、看电影，这些习惯都容易造成颈部肌肉使用过度，引起疼痛。
        \n“要防治轻度颈椎疾病，首先要做好日常保健，例如及时改变长期伏案、长期抬头或躺、半卧在床上阅读的习惯。”他说，另外，患者也应该根据自身的体能情况选择保健方式。体能较强的、年轻力壮的患者可以选择俯卧撑、蛙泳等运动来强化颈部肌肉；体能较弱的患者则可以选择半俯卧撑，即利用栏杆、桌子等物件进行45度至60度的俯卧撑练习。
        \n何二兴介绍，当人的身体处于俯卧状态，颈部需要承受的力量是站立时的几十甚至一百多倍，所以平时多做俯卧运动可以锻炼颈部肌肉，防止颈椎疾病。
        \n若等瘫痪才手术治愈率降到30%%以下
        \n对于较为重症的颈椎病患者，何二兴建议通过适量的针对性运动以及辅以药物治疗，甚至施行手术及早根治病患。
        \n对于坊间流传的一些诸如“不到瘫痪都不动颈椎手术”之类的传言，何二兴指出，这也是一种出于过分恐惧的误解。
        \n他说，颈椎手术在国际上已经有一百多年的历史，技术已经相当成熟，尤其是对于资历深厚、临床经验丰富的医生来讲，并不是一种高风险的手术类型。颈椎病患者应该遵医嘱及时采取有效的治疗方法，避免颈部神经长期受压，造成不可逆的后果。如果真的等到瘫痪了才选择手术，那治愈率将降到30%以下，给患者带来终生遗憾。</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_department_detail">DepartmentDetailActivity</string>
    <string name="title_activity_treat_detail">TreatDetailActivity</string>
</resources>
